# kimika

./: .gitattributes   .gitignore  Cargo.toml  README.md  TODO.md  biome.json  note.md
.cargo/: config.toml
.github/workflows/: ci-ts.yml  ci.yml  release.yml  test-ts.yml  test.yml
assets/excalidraw/: local.excalidraw  remote.excalidraw
docs/: configuration.md  server.md  usage.md
examples/: client.rs  demo.rs  server.rs
kimika/: Cargo.toml  build.rs
kimika-server/: Cargo.toml
kimika-server-ts/: Dockerfile  README.md  biome.json  build.sh  bun.lockb  main.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
kimika-server-ts/proto/: remote.proto
kimika-server-ts/src/: eventChannel.ts  events.ts  handler.ts  logger.ts  middleware.ts  state.ts
kimika-server-ts/src/proto/: remote_grpc_pb.d.ts  remote_grpc_pb.js  remote_pb.d.ts  remote_pb.js
kimika-server/src/: data.rs  main.rs
kimika-server/src/grpc/: mod.rs
kimika-server/src/service/: get_metadata.rs  get_receivers.rs  mod.rs  post_download.rs  post_metadata.rs  post_register.rs  post_select_metadata.rs  post_upload.rs  transfer.rs
kimika-server/src/utils/: hyper_utils.rs  mod.rs  types.rs
kimika/examples/: server.rs
kimika/proto/: transfer.proto
kimika/src/: main.rs
kimika/src/config/: default.toml  mod.rs
kimika/src/receive/: grpc.rs  local.rs  local_grpc.rs  mod.rs  remote.rs  remote_bark.rs  remote_grpc.rs  udp.rs
kimika/src/request/: local.rs  mod.rs  remote.rs  udp.rs
kimika/src/send/: grpc.rs  local.rs  local_grpc.rs  mod.rs  remote.rs  remote_grpc.rs  remote_http.rs  udp.rs  utils.rs
kimika/src/server/: mod.rs  receiver.rs  sender.rs  udp.rs
kimika/src/utils/: clap.rs  color.rs  crossterm.rs  handle.rs  mod.rs  multiselect.rs  request.rs  select.rs  udp.rs
kimika_grpc/: Cargo.toml  build.rs
kimika_grpc/proto/: local.proto  remote.proto
kimika_grpc/src/: lib.rs
kimika_shared/: Cargo.toml
kimika_shared/src/: type_utils.rs
