[package]
name = "kimika-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimika_grpc = { path = "../kimika_grpc" }
kimika_shared = { path = "../kimika_shared" }

tonic = "0.11.0"
tokio = { version =  "1.36.0", features = ["macros", "sync", "time", "fs", "io-util"] }
tokio-stream = "0.1.15"
