[package]
name = "kimika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimika_grpc = { path = "../kimika_grpc" }
kimika_shared = { path = "../kimika_shared" }

bincode = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
indicatif = "0.17.8"
dirs = "5.0.1"
figment = { version = "0.10", features = ["toml"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
reqwest = { version = "0.12.7", features = ["stream", "json"] }
uuid = {version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde_qs = "0.13.0"
tokio-util = "0.7.12"

[build-dependencies]
tonic-build = "0.11"
