[package]
name = "kimika"
version = "0.1.0"
edition = "2021"


[dependencies]
kimika_grpc = { path = "../kimika_grpc" }
kimika_shared = { path = "../kimika_shared" }

bincode = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
indicatif = "0.17.8"
dirs = "5.0.1"
figment = { version = "0.10", features = ["toml"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
reqwest = { version = "0.12.7", features = ["stream", "json"] }
uuid = {version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
tokio-util = "0.7.12"
bytes = "1.7.1"
mac_address = "1.1.7"

[build-dependencies]
tonic-build = "0.11"
